--- a/index.html
+++ b/index.html
@@ -19,37 +19,13 @@
     </div>
 
     <div id="next-meetup">
-      Nächstes <span class="important-info">Treffen</span><br>
-      <span class="important-info">Design Thinking Workshop</span><br>
-      <span class="important-info">19 Uhr, 13. Nov.</span> 2014<br>
-      <span class="important-info">AutoScout24</span>, München
-      <a class="icon-link" href="https://goo.gl/maps/Civ4C"><i class="fa fa-map-marker"></i></a><br>
-      <span class="important-info"><a
-          href="http://www.eventbrite.com/e/design-thinking-workshop-mit-godehard-gerling-tickets-13873364607?utm_campaign=new_eventv2&utm_medium=email&utm_source=eb_email&utm_term=eventurl_text">Registrieren</a></span>
+      <span class="important-info">Winterpause</span><br>
+      bis Ende Januar, 2015<br>
+      Wir melden uns<br>im Februar 2015 wieder!
     </div>
   </section>
 
   <section id="description">
-    <p class="title">
-      Join Us
-    </p>
-
-    <p class="talk-title">
-      Design Thinking Workshop mit Godehard Gerling<br>
-    </p>
-
-    <p>
-      Die Teilnehmerzahl ist diesmal auf 30 begrenzt. Bitte registriert euch via <a href="http://www.eventbrite.com/e/design-thinking-workshop-mit-godehard-gerling-tickets-13873364607?utm_campaign=new_eventv2&utm_medium=email&utm_source=eb_email&utm_term=eventurl_text">Eventbrite</a>.
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 13. November 2014 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 in
-      München treffen.
-    </p>
-
-    <p>
-    Für Getränke und Essen ist gesorgt.
-    </p>
 
     <p class="title">
       Hello, World!
@@ -110,7 +86,7 @@
     <div id="footer-content">
       <ul>
         <li><a href="https://dt-muc.atlassian.net/wiki/display/dtmuc/Home">Wiki</a></li>
-        <li><a href="https://www.xing.com/net/designthinking-muc/">Xing-Gruppe</a></li>
+        <li><a href="https://www.xing.com/net/designthinking-muc/">Xing</a></li>
         <li><a href="https://twitter.com/dt_muc">Twitter</a></li>
         <li><a href="https://www.facebook.com/groups/604862709598032/">Facebook</a></li>
         <li><a href="mailto:info@dt-muc.de">Email</a></li>
