--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
     <div id="next-meetup">
       <span class="important-info">Winterpause</span><br>
-      bis Ende Januar, 2015<br>
-      Wir melden uns<br>im Februar 2015 wieder!
+      Ab Februar 2015<br>geht's wieder los!
     </div>
   </section>
 
