--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Erfahrungsbericht</span><br>Unify und frog design<br>
-      <span class="important-info">19 Uhr, 12. Feb.</span> 2015<br>
-      <span class="important-info">frog design</span>, München
-      <a class="icon-link" href="https://goo.gl/maps/KE70l"><i class="fa fa-map-marker"></i></a><br>
-      <span class="important-info"><a
-          href="https://www.eventbrite.com/e/erfahrungsbericht-projekt-circuit-unify-und-frog-design-tickets-15538519129">Registrieren</a></span>
+            Nächster <span class="important-info">Stammtisch</span><br>
+            <span class="important-info">19 Uhr, 12. März</span> 2015<br>
+            <span class="important-info">TBA</span>
     </div>
   </section>
 
@@ -34,31 +31,16 @@
       Join Us
     </p>
 
-    <p class="talk-title">
-      Erfahrungsbericht Projekt Circuit: Unify und frog design<br>
-      mit Kalle Buschmann (frog design) und Philipp Bohn (Unify)
+    <p>
+            Am Stammtisch wollen wir uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene
+            andere Themen unterhalten.
     </p>
 
     <p>
-      Kalle und Philipp berichten aus praktischer Sicht über die dreijährige Zusammenarbeit zwischen Unify und frog.
-      Speziell sprechen sie über Chancen und Herausforderungen der designgetriebenen Softwareentwicklung und damit
-      verbundene Anpassungen in Prozessen und Kultur.
-
-      Informationen zu Circuit findet ihr unter <a href="http://www.yourcircuit.com">yourcircuit.com</a> und <a href="http://www.frogdesign.com/work/unify-project-circuit.html">frog design</a>
+            Wir werden uns um 19 Uhr am 9. Juli 2014. Der Ort wird bald bekannt gegeben.
     </p>
 
-    <p>
-      Bitte registriert euch via <a href="">Eventbrite</a>.
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 12. Februar 2015 in den Räumen von frog design in der Leopoldstr. 55 in München
-      treffen.
-    </p>
-
-    <p>
-      Für Getränke und Essen ist gesorgt.
-    </p>
+        <hr>
 
     <p class="title">
       Hello, World!
