--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
-
+<!-- mein Kommentar -->
 <div id="container">
 
   <section id="splash">
