--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="next-meetup">
             Nächster <span class="important-info">Stammtisch</span><br>
             <span class="important-info">19 Uhr, 12. März</span> 2015<br>
-            <span class="important-info">TBA</span>
+            <span class="important-info">Ort: TBA</span>
     </div>
   </section>
 
@@ -37,7 +37,7 @@
     </p>
 
     <p>
-            Wir werden uns um 19 Uhr am 9. Juli 2014. Der Ort wird bald bekannt gegeben.
+            Wir werden uns um 19 Uhr am 12. März 2015. Der Ort wird bald bekannt gegeben.
     </p>
 
         <hr>
