--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </p>
 
     <p>
-            Wir werden uns um 19 Uhr am 12. März 2015. Der Ort wird bald bekannt gegeben.
+            Wir werden uns um 19 Uhr am 12. März 2015 treffen. Der Ort wird bald bekannt gegeben.
     </p>
 
         <hr>
