--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="next-meetup">
             Nächster <span class="important-info">Stammtisch</span><br>
             <span class="important-info">19 Uhr, 12. März</span> 2015<br>
-            <span class="important-info">Ort: TBA</span>
+            <span class="important-info">Ort: TBA</span><br>
             <a href="https://www.xing.com/events/design-thinking-meetup-12-marz-2015-1511031">Xing-Event</a>
     </div>
   </section>
