add text around xing link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </p>
 
     <p>
-            Wir werden uns um 19 Uhr am 12. März 2015 treffen. Der Ort wird bald bekannt gegeben.
+            Wir werden uns um 19 Uhr am 12. März 2015 treffen. Der Ort wird bald bekannt gegeben. Bitte registriert euch unter <a href="https://www.xing.com/events/design-thinking-meetup-12-marz-2015-1511031">Xing-Event</a>, sodass wir abschätzen können, wie viele kommen.
     </p>
 
         <hr>
