--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="next-meetup">
             Nächster <span class="important-info">Stammtisch</span><br>
             <span class="important-info">19 Uhr, 12. März</span> 2015<br>
-            <span class="important-info">Ort: TBA</span><br>
+            <span class="important-info">Ort: <a href="http://www.ocui.de">ocui</a></span><br>
             <a href="https://www.xing.com/events/design-thinking-meetup-12-marz-2015-1511031">Xing-Event</a>
     </div>
   </section>
@@ -38,7 +38,7 @@
     </p>
 
     <p>
-            Wir werden uns um 19 Uhr am 12. März 2015 treffen. Der Ort wird bald bekannt gegeben. Bitte registriert euch unter <a href="https://www.xing.com/events/design-thinking-meetup-12-marz-2015-1511031">Xing-Event</a>, sodass wir abschätzen können, wie viele kommen.
+    Wir werden uns um 19 Uhr am 12. März 2015 in <a href="http://www.ocui.de">ocui</a>, Oberanger Str. 31, 80331 M&uuml;nchen, treffen. Bitte registriert euch unter <a href="https://www.xing.com/events/design-thinking-meetup-12-marz-2015-1511031">Xing-Event</a>, sodass wir abschätzen können, wie viele kommen.
     </p>
 
         <hr>
