--- a/index.html
+++ b/index.html
@@ -19,29 +19,13 @@
     </div>
 
     <div id="next-meetup">
-            Nächster <span class="important-info">Stammtisch</span><br>
-            <span class="important-info">19 Uhr, 12. März</span> 2015<br>
-            <span class="important-info">Ort: <a href="http://www.ocui.de">ocui</a></span><br>
-            <a href="https://www.xing.com/events/design-thinking-meetup-12-marz-2015-1511031">Xing-Event</a>
+      Nächstes Treffen<br>
+      wird bald<br>
+      bekannt gegeben
     </div>
   </section>
 
   <section id="description">
-
-    <p class="title">
-      Join Us
-    </p>
-
-    <p>
-            Am Stammtisch wollen wir uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene
-            andere Themen unterhalten.
-    </p>
-
-    <p>
-    Wir werden uns um 19 Uhr am 12. März 2015 in <a href="http://www.ocui.de">ocui</a>, Oberanger Str. 31, 80331 M&uuml;nchen, treffen. Bitte registriert euch unter <a href="https://www.xing.com/events/design-thinking-meetup-12-marz-2015-1511031">Xing-Event</a>, sodass wir abschätzen können, wie viele kommen.
-    </p>
-
-        <hr>
 
     <p class="title">
       Hello, World!
