--- a/index.html
+++ b/index.html
@@ -19,13 +19,38 @@
     </div>
 
     <div id="next-meetup">
-      Nächstes Treffen<br>
-      wird bald<br>
-      bekannt gegeben
+      Nächstes <span class="important-info">Treffen</span><br>
+      <span class="important-info">Julia Butter</span><br>
+      <span class="important-info">Oh ja, lass uns Fehler machen!</span><br>
+      <span class="important-info">19 Uhr, 21. Mai</span> 2015<br>
+      <span class="important-info"><a href="https://goo.gl/maps/hh2UH">AutoScout24</a></span><br>
     </div>
   </section>
 
   <section id="description">
+    <p class="title">
+      Join Us
+    </p>
+
+    <p class="talk-title">
+      "Oh ja, lass uns Fehler machen!" - Warum gute Fehler in Innovationsprozessen unabdingbar sind
+    </p>
+
+    <p>
+      <img src="rsrc/avatar-julia-butter.jpg" width="200"><br>
+      Julia Butter, Experteer GmbH
+    </p>
+
+    <p>
+      Wir werden uns um 19 Uhr am 21. Mai 2015 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 in München
+      treffen.
+    </p>
+
+    <p>
+      Für Getränke und Essen ist gesorgt.
+    </p>
+
+    <hr>
 
     <p class="title">
       Hello, World!
