--- a/index.html
+++ b/index.html
@@ -19,12 +19,9 @@
     </div>
 
     <div id="next-meetup">
-      Nächstes <span class="important-info">Treffen</span><br>
-      <span class="important-info">Julia Butter</span><br>
-      <span class="important-info">Oh ja, lass uns Fehler machen!</span><br>
-      <span class="important-info">19 Uhr, 21. Mai</span> 2015<br>
-      <span class="important-info"><a href="https://goo.gl/maps/hh2UH">AutoScout24</a></span><br>
-      <a href="https://www.xing.com/events/design-thinking-munchen-vortragsabend-1553685">Registrierung</a> über Xing
+      Nächster <span class="important-info">Stammtisch</span><br>
+      <span class="important-info">19 Uhr, 23. Juni</span> 2015<br>
+      <span class="important-info">TBA</span>
     </div>
   </section>
 
@@ -33,26 +30,13 @@
       Join Us
     </p>
 
-    <p class="talk-title">
-      "Oh ja, lass uns Fehler machen!" - Warum gute Fehler in Innovationsprozessen unabdingbar sind
+    <p>
+      Am Stammtisch wollen wir uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene
+      andere Themen unterhalten.
     </p>
 
     <p>
-Machst du gern Fehler? - Vermutlich nicht. Auch wenn eine der "Regeln" im Design Thinking 'Fail early and often' ist, schätzen die meisten Leute Fehler eher dann, wenn sie nicht ihnen selbst passieren. Aber Fehler bergen ein gigantisches Potential, welches man mit den richtigen (meist relativ simplen) Tools entfesseln kann. Einige davon lernst du in dem Vortrag kennen - es sei denn du machst den Fehler und kommst nicht ;)
-    </p>
-
-    <p>
-      <img src="rsrc/avatar-julia-butter.jpg" width="200"><br>
-      Julia Butter, Experteer GmbH
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 21. Mai 2015 in den Räumen von AutoScout24 in der Dingolfinger Str. 1-15 in München
-      treffen. Bitte registriert euch über <a href="https://www.xing.com/events/design-thinking-munchen-vortragsabend-1553685">Xing</a>.
-    </p>
-
-    <p>
-      Für Getränke und Essen ist gesorgt.
+      Wir werden uns um 19 Uhr am 23. Juni 2015 treffen. Der Ort wird bald bekannt gegeben.
     </p>
 
     <hr>
