--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <div id="next-meetup">
       Nächster <span class="important-info">Stammtisch</span><br>
       <span class="important-info">19 Uhr, 23. Juni</span> 2015<br>
-      <span class="important-info">TBA</span>
+      <span class="important-info">TBA</span><br>
+      <span>RSVP über <a href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1569371"><i class="fa fa-xing-square"></i>
+      </a>&nbsp;<a href="https://www.facebook.com/events/1401542376843226/"><i class="fa fa-facebook-square"></i></a></span>
     </div>
   </section>
 
