--- a/index.html
+++ b/index.html
@@ -19,29 +19,13 @@
     </div>
 
     <div id="next-meetup">
-      Nächster <span class="important-info">Stammtisch</span><br>
-      <span class="important-info">19 Uhr, 23. Juni</span> 2015<br>
-      <span class="important-info"><a href="http://www.ocui.de">OCUI</a></span><br>
-      <span>RSVP über <a href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1569371"><i class="fa fa-xing-square"></i>
-      </a>&nbsp;<a href="https://www.facebook.com/events/1401542376843226/"><i class="fa fa-facebook-square"></i></a></span>
+      <span class="important-info">Sommerpause</span><br>
+      bis Ende August, 2015<br>
+      Wir melden uns<br>im September 2015<br>wieder!
     </div>
   </section>
 
   <section id="description">
-    <p class="title">
-      Join Us
-    </p>
-
-    <p>
-      Am Stammtisch wollen wir uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene
-      andere Themen unterhalten.
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 23. Juni 2015 in <a href="http://www.ocui.de">OCUI</a>, Oberanger Str. 31, 80331 München, treffen.
-    </p>
-
-    <hr>
 
     <p class="title">
       Hello, World!
