use a diff url for stylight

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       Nächstes <span class="important-info">Treffen</span><br>
       <span class="important-info">Systematisch Innovieren</span><br>
       <span class="important-info">19 Uhr, 6. Okt.</span> 2015<br>
-      <span class="important-info"><a href="http://stylight.de">Stylight</a></span>, München
+      <span class="important-info"><a href="http://engineering.stylight.com/">Stylight</a></span>, München
       <a class="icon-link" href="https://goo.gl/maps/EP0Nm"><i class="fa fa-map-marker"></i></a><br>
       <span class="important-info"><a
           href="https://www.xing.com/events/6-oktober-systematisch-innovieren-design-thinking-munchen-1600492">Registrieren</a></span>
