prepare next event

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <div id="next-meetup">
       Nächstes <span class="important-info">Treffen</span><br>
-      <span class="important-info">Systematisch Innovieren</span><br>
-      <span class="important-info">19 Uhr, 6. Okt.</span> 2015<br>
-      <span class="important-info"><a href="http://engineering.stylight.com/">Stylight</a></span>, München
-      <a class="icon-link" href="https://goo.gl/maps/EP0Nm"><i class="fa fa-map-marker"></i></a><br>
+      <span class="important-info">TBA</span><br>
+      <span class="important-info">19 Uhr, 19. Nov.</span> 2015<br>
+      <span class="important-info">Google</span>, München
+      <!--<a class="icon-link" href="https://goo.gl/maps/EP0Nm"><i class="fa fa-map-marker"></i></a><br>
       <span class="important-info"><a
-          href="https://www.xing.com/events/6-oktober-systematisch-innovieren-design-thinking-munchen-1600492">Registrieren</a></span>
+      href="https://www.xing.com/events/6-oktober-systematisch-innovieren-design-thinking-munchen-1600492">Registrieren</a></span>-->
     </div>
   </section>
 
@@ -35,16 +35,11 @@
     </p>
 
     <p class="talk-title">
-      Systematisch Innovieren mit <a href="https://www.xing.com/profile/Philipp_Gasteiger">Philipp Gasteiger</a>, <a href="http://www.sitgermany.com">SIT Innovation GmbH</a>
+    TBA
     </p>
 
     <p>
-      Kreativität und Ideen kann man sich ganz systematisch erarbeiten!
-      'Systematic Inventive Thinking' bietet eine völlig andere, bestens erprobte Herangehensweise an das Thema Innovation, die es möglich macht mit einfachen Werkzeugen schnell und effektiv relevante und umsetzbare Ideen zu entwickeln, die weit über die Vorstellungskraft der Kunden hinausgehen. Fragen Sie ihr Produkt, ihren Prozess oder ihr Geschäftsmodell doch direkt welche Innovationspotentiale in Ihm stecken!
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 6. Oktober 2015 in den Räumen von Stylight in der Nymphenburger Str. 86 in
+      Wir werden uns um 19 Uhr am 19. November 2015 in den Räumen von Google in
       München treffen.
     </p>
 
