--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
-<!-- mein Kommentar -->
+
 <div id="container">
 
   <section id="splash">
@@ -19,13 +19,13 @@
     </div>
 
     <div id="next-meetup">
-      Nächstes <span class="important-info">Treffen</span><br>
-      <span class="important-info">TBA</span><br>
+      <span class="important-info">Research for the Rest</span><br>
+      <span class="important-info">Rachel Simpson, Google</span><br>
       <span class="important-info">19 Uhr, 19. Nov.</span> 2015<br>
-      <span class="important-info">Google</span>, München
-      <!--<a class="icon-link" href="https://goo.gl/maps/EP0Nm"><i class="fa fa-map-marker"></i></a><br>
+      <span class="important-info"><a href="http://www.freeletics.com">Freeletics</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/y3cPhGo2a6T2"><i class="fa fa-map-marker"></i></a><br>
       <span class="important-info"><a
-      href="https://www.xing.com/events/6-oktober-systematisch-innovieren-design-thinking-munchen-1600492">Registrieren</a></span>-->
+      href="https://www.xing.com/events/19-11-research-for-the-rest-workshop-design-thinking-muc-1619900?cce=em61f5ab16.%3Aoqw6ImH9S4-arcddTWyKAG">Registrieren</a></span>
     </div>
   </section>
 
@@ -35,12 +35,24 @@
     </p>
 
     <p class="talk-title">
-    TBA
+      Research for the Rest, Workshop Event
     </p>
 
     <p>
-      Wir werden uns um 19 Uhr am 19. November 2015 in den Räumen von Google in
-      München treffen.
+      Knowing what to build and how to build it means doing qualitative research at every step of the way, whether you're at a small startup or a large company.
+
+      In this workshop, Rachel will give a short introduction to the topic of Design Research, especially targeted at people who aren't researchers. The workshop will include a live usability test demo, and a hands-on portion will introduce participants to running their own usability test. A wrap up discussion will help attendees explore how they might integrate usability testing into our own day to day work.
+    </p>
+
+    <p>
+      Rachel is currently working as a UX Designer on the Google Chrome team. She has worked with award winning Design Agencies, Startups and Software Companies and frequently speaks on topics related to Design, User Research and prototyping.
+
+      In her free time, she organizes events. She was one of the original co-founders of Make Munich, a yearly festival of all things DIY. She also started
+      <a href="http://www.designj.am">Munich Design Jam</a>, and is a local coordinator on the team of IxDA Munich.
+    </p>
+
+    <p>
+      Wir werden uns um 19 Uhr am 19. November 2015 in den Räumen von Freeletics in München treffen.
     </p>
 
     <p>
