--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="next-meetup">
       <span class="important-info">Research for the Rest</span><br>
-      <span class="important-info">Rachel Simpson, Google</span><br>
+      <span class="important-info">Rachel Simpson</span>, Google<br>
       <span class="important-info">19 Uhr, 19. Nov.</span> 2015<br>
       <span class="important-info"><a href="http://www.freeletics.com">Freeletics</a></span>, München
       <a class="icon-link" href="https://goo.gl/maps/y3cPhGo2a6T2"><i class="fa fa-map-marker"></i></a><br>
