--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Research for the Rest</span><br>
-      <span class="important-info">Rachel Simpson</span>, Google<br>
-      <span class="important-info">19 Uhr, 19. Nov.</span> 2015<br>
-      <span class="important-info"><a href="http://www.freeletics.com">Freeletics</a></span>, München
-      <a class="icon-link" href="https://goo.gl/maps/y3cPhGo2a6T2"><i class="fa fa-map-marker"></i></a><br>
+      <span class="important-info">Stammtisch</span><br>
+      <span class="important-info">19 Uhr, 10. Dez.</span> 2015<br>
+      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
       <span class="important-info"><a
-      href="https://www.xing.com/events/19-11-research-for-the-rest-workshop-design-thinking-muc-1619900?cce=em61f5ab16.%3Aoqw6ImH9S4-arcddTWyKAG">Registrieren</a></span>
+      href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1628589?notification_id=2135988&cce=em61f5ab16.:08FE9rtGJ9ujBlHEaE7gAG">Registrieren</a></span>
     </div>
   </section>
 
@@ -35,28 +34,15 @@
     </p>
 
     <p class="talk-title">
-      Research for the Rest, Workshop Event
+      Stammtisch
     </p>
 
     <p>
-      Knowing what to build and how to build it means doing qualitative research at every step of the way, whether you're at a small startup or a large company.
-
-      In this workshop, Rachel will give a short introduction to the topic of Design Research, especially targeted at people who aren't researchers. The workshop will include a live usability test demo, and a hands-on portion will introduce participants to running their own usability test. A wrap up discussion will help attendees explore how they might integrate usability testing into our own day to day work.
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
     </p>
 
     <p>
-      Rachel is currently working as a UX Designer on the Google Chrome team. She has worked with award winning Design Agencies, Startups and Software Companies and frequently speaks on topics related to Design, User Research and prototyping.
-
-      In her free time, she organizes events. She was one of the original co-founders of Make Munich, a yearly festival of all things DIY. She also started
-      <a href="http://www.designj.am">Munich Design Jam</a>, and is a local coordinator on the team of IxDA Munich.
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 19. November 2015 in den Räumen von Freeletics in München treffen.
-    </p>
-
-    <p>
-      Für Getränke und Essen ist gesorgt.
+      Wir werden uns um 19 Uhr am 10. Dezember 2015 in <a href="http://www.ocui.de">ocui</a> treffen.
     </p>
 
     <p class="title">
