--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Stammtisch</span><br>
-      <span class="important-info">19 Uhr, 10. Dez.</span> 2015<br>
-      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
-      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
-      <span class="important-info"><a
-      href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1628589?notification_id=2135988&cce=em61f5ab16.:08FE9rtGJ9ujBlHEaE7gAG">Registrieren</a></span>
+      <span class="important-info">Innovation - The misnomer</span><br>
+      <span class="important-info">Markus Andrezak</span>, <a href="http://ueberproduct.de/en/team/">überproduct</a><br>
+      <span class="important-info">19 Uhr, 16. Feb.</span> 2016<br>
+      <span class="important-info">TBA</span>, München
+      <!--<a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>-->
+      <!--<span class="important-info"><a-->
+      <!--href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1628589?notification_id=2135988&cce=em61f5ab16.:08FE9rtGJ9ujBlHEaE7gAG">Registrieren</a></span>-->
     </div>
   </section>
 
@@ -34,15 +35,28 @@
     </p>
 
     <p class="talk-title">
-      Stammtisch
+      Innovation - The misnomer
     </p>
 
     <p>
-      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
+      Markus Andrezak, <a href="http://ueberproduct.de/en/team/">überproduct</a>
     </p>
 
     <p>
-      Wir werden uns um 19 Uhr am 10. Dezember 2015 in <a href="http://www.ocui.de">ocui</a> treffen.
+    Everyone wants innovation, few want to pay the price. Few even want to deeply understand what is is or what to do to get "it" - whatever "it" may be.
+    </p>
+
+
+    <p>We want to scale innovation in our company / Enterprise<br>
+      Let's do 20% time<br>
+      Let's do open spaces<br>
+      Let's encourage everyone<br>
+    </p>
+
+    <p>This talk wants go explain levels of doing new things, help give these levels a name and actions behind it and finally help understand what"s going on. We will hear about pioneers, settlers, town planners, pharmaceuticals, manufacturing and engineering, dilemmata and aggregation. We will get happy, sad, mad and dizzy. Finally, we might together kill the word Innovation as it becomes overloaded, bloated and finally meaning- and worthless.</p>
+
+    <p>
+      Wir werden uns um 19 Uhr am 16. Februar 2016 treffen. Der Ort wird bald bekannt gegeben.
     </p>
 
     <p class="title">
