--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <span class="important-info">Innovation - The misnomer</span><br>
       <span class="important-info">Markus Andrezak</span>, <a href="http://ueberproduct.de/en/team/">überproduct</a><br>
       <span class="important-info">19 Uhr, 22. Feb.</span> 2016<br>
-      <span class="important-info">TBA</span>, München
-      <!--<a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>-->
+      <span class="important-info"><a href="http://tngtech.com">TNG</a></span>, Unterföhring
+      <a class="icon-link" href="https://goo.gl/maps/sF5picoJKaG2"><i class="fa fa-map-marker"></i></a><br>
       <!--<span class="important-info"><a-->
       <!--href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1628589?notification_id=2135988&cce=em61f5ab16.:08FE9rtGJ9ujBlHEaE7gAG">Registrieren</a></span>-->
     </div>
