--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Innovation - The misnomer</span><br>
-      <span class="important-info">Markus Andrezak</span>, <a href="http://ueberproduct.de/en/team/">überproduct</a><br>
-      <span class="important-info">19 Uhr, 22. Feb.</span> 2016<br>
-      <span class="important-info"><a href="http://tngtech.com">TNG</a></span>, Unterföhring
-      <a class="icon-link" href="https://goo.gl/maps/sF5picoJKaG2"><i class="fa fa-map-marker"></i></a><br>
+      <span class="important-info">Titel: TBA</span><br>
+      <span class="important-info">Ben O'Hear</span> und <span class="important-info">Ralf Westbrock</span><br>
+      <span class="important-info">19 Uhr, 17. Mär.</span> 2016<br>
+      <span class="important-info">TBA
+      <!--<a class="icon-link" href="https://goo.gl/maps/sF5picoJKaG2"><i class="fa fa-map-marker"></i></a><br>-->
       <!--<span class="important-info"><a-->
       <!--href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1628589?notification_id=2135988&cce=em61f5ab16.:08FE9rtGJ9ujBlHEaE7gAG">Registrieren</a></span>-->
     </div>
@@ -35,28 +35,19 @@
     </p>
 
     <p class="talk-title">
-      Innovation - The misnomer
+      Titel: TBA
     </p>
 
     <p>
-      Markus Andrezak, <a href="http://ueberproduct.de/en/team/">überproduct</a>
+      Ben O'Hear und Ralf Westbrock
     </p>
+
+    <!--<p>-->
+    <!--Everyone wants innovation, few want to pay the price. Few even want to deeply understand what is is or what to do to get "it" - whatever "it" may be.-->
+    <!--</p>-->
 
     <p>
-    Everyone wants innovation, few want to pay the price. Few even want to deeply understand what is is or what to do to get "it" - whatever "it" may be.
-    </p>
-
-
-    <p>We want to scale innovation in our company / Enterprise<br>
-      Let's do 20% time<br>
-      Let's do open spaces<br>
-      Let's encourage everyone<br>
-    </p>
-
-    <p>This talk wants go explain levels of doing new things, help give these levels a name and actions behind it and finally help understand what"s going on. We will hear about pioneers, settlers, town planners, pharmaceuticals, manufacturing and engineering, dilemmata and aggregation. We will get happy, sad, mad and dizzy. Finally, we might together kill the word Innovation as it becomes overloaded, bloated and finally meaning- and worthless.</p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 22. Februar 2016 treffen. Der Ort wird bald bekannt gegeben.
+      Wir werden uns um 19 Uhr am 17. März 2016 treffen. Der Ort wird bald bekannt gegeben.
     </p>
 
     <p class="title">
