--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Titel: TBA</span><br>
-      <span class="important-info">Ben O'Hear</span> und <span class="important-info">Ralf Westbrock</span><br>
+      <span class="important-info">Stammtisch</span><br>
+      <!--<span class="important-info">Ben O'Hear</span> und <span class="important-info">Ralf Westbrock</span><br>-->
       <span class="important-info">19 Uhr, 17. Mär.</span> 2016<br>
-      <span class="important-info">TBA
+      Ort: <span class="important-info">TBA</span>
       <!--<a class="icon-link" href="https://goo.gl/maps/sF5picoJKaG2"><i class="fa fa-map-marker"></i></a><br>-->
       <!--<span class="important-info"><a-->
       <!--href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1628589?notification_id=2135988&cce=em61f5ab16.:08FE9rtGJ9ujBlHEaE7gAG">Registrieren</a></span>-->
@@ -35,16 +35,12 @@
     </p>
 
     <p class="talk-title">
-      Titel: TBA
+      Stammtisch
     </p>
 
     <p>
-      Ben O'Hear und Ralf Westbrock
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
     </p>
-
-    <!--<p>-->
-    <!--Everyone wants innovation, few want to pay the price. Few even want to deeply understand what is is or what to do to get "it" - whatever "it" may be.-->
-    <!--</p>-->
 
     <p>
       Wir werden uns um 19 Uhr am 17. März 2016 treffen. Der Ort wird bald bekannt gegeben.
