add stammtisch location

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <span class="important-info">Stammtisch</span><br>
       <!--<span class="important-info">Ben O'Hear</span> und <span class="important-info">Ralf Westbrock</span><br>-->
       <span class="important-info">19 Uhr, 17. Mär.</span> 2016<br>
-      Ort: <span class="important-info">TBA</span>
-      <!--<a class="icon-link" href="https://goo.gl/maps/sF5picoJKaG2"><i class="fa fa-map-marker"></i></a><br>-->
-      <!--<span class="important-info"><a-->
-      <!--href="https://www.xing.com/events/design-thinking-munchen-stammtisch-1628589?notification_id=2135988&cce=em61f5ab16.:08FE9rtGJ9ujBlHEaE7gAG">Registrieren</a></span>-->
+      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
+      <span class="important-info"><a
+              href="https://www.xing.com/events/17-03-stammtisch-design-thinking-muc-1665439?notification_id=2217052&cce=em61f5ab16.:mdGCXexKAuvTDxGEdA2AAD">Registrieren</a></span>
     </div>
   </section>
 
