--- a/index.html
+++ b/index.html
@@ -19,13 +19,8 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Stammtisch</span><br>
-      <!--<span class="important-info">Ben O'Hear</span> und <span class="important-info">Ralf Westbrock</span><br>-->
-      <span class="important-info">19 Uhr, 17. Mär.</span> 2016<br>
-      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
-      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
-      <span class="important-info"><a
-              href="https://www.xing.com/events/17-03-stammtisch-design-thinking-muc-1665439?notification_id=2217052&cce=em61f5ab16.:mdGCXexKAuvTDxGEdA2AAD">Registrieren</a></span>
+      <span class="important-info">Abgesagt: <del>Stammtisch</del></span><br>
+      <del><span class="important-info">19 Uhr, 17. Mär.</span> 2016</del><br>
     </div>
   </section>
 
@@ -35,15 +30,8 @@
     </p>
 
     <p class="talk-title">
-      Stammtisch
-    </p>
-
-    <p>
-      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 17. März 2016 treffen. Der Ort wird bald bekannt gegeben.
+      Aufgrund einer spannenden Parallelveranstaltung, Eric von Hippel on <a href="http://www.mcir.digital/#sprecher">Free Innovation and the Internet</a>, fällt der Stammtisch diesmal aus.<br>
+      Als Ersatz werden wir möglicherweise nach der Veranstaltung in der Nähe zusammen in eine Bar gehen.
     </p>
 
     <p class="title">
