--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Abgesagt: <del>Stammtisch</del></span><br>
-      <del><span class="important-info">19 Uhr, 17. Mär.</span> 2016</del><br>
+      <span class="important-info">Stammtisch></span><br>
+      <span class="important-info">19 Uhr, 12. Apr.</span> 2016<br>
+      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
+      <span class="important-info"><a
+              href="https://www.xing.com/events/12-04-stammtisch-design-thinking-munchen-1673027/">Registrieren</a></span>
     </div>
   </section>
 
@@ -29,9 +33,8 @@
       Join Us
     </p>
 
-    <p class="talk-title">
-      Aufgrund einer spannenden Parallelveranstaltung, Eric von Hippel on <a href="http://www.mcir.digital/#sprecher">Free Innovation and the Internet</a>, fällt der Stammtisch diesmal aus.<br>
-      Als Ersatz werden wir möglicherweise nach der Veranstaltung in der Nähe zusammen in eine Bar gehen.
+    <p>
+      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
     </p>
 
     <p class="title">
