--- a/index.html
+++ b/index.html
@@ -19,16 +19,42 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Stammtisch></span><br>
-      <span class="important-info">19 Uhr, 12. Apr.</span> 2016<br>
-      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
-      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
-      <span class="important-info"><a
-              href="https://www.xing.com/events/12-04-stammtisch-design-thinking-munchen-1673027/">Registrieren</a></span>
+      <span class="important-info">Design Thinking, meet Lean Startup</span><br>
+      <span class="important-info">19 Uhr, 12. Mai</span> 2016<br>
+      <span class="important-info"><a href="https://www.freeletics.com">Freeletics</a></span>, München
+      <a class="icon-link" href="https://goo.gl/maps/FCv36mN3gTR2"><i class="fa fa-map-marker"></i></a><br>
+      <span class="important-info">Registrieren:</span> <a
+              href="https://www.xing.com/events/12-05-design-thinking-meet-lean-startup-dt-muc-1683893">Xing</a> oder <a href="http://www.meetup.com/DT-Muc/events/230344182/">Meetup</a>
     </div>
   </section>
 
   <section id="description">
+    <p class="talk-title">
+      Design Thinking, meet Lean Startup
+    </p>
+
+    <p>
+      Ben O'Hear und Ralf Westbrock
+    </p>
+
+    <p>
+      Should a company seeking to innovate use Lean Startup or Design Thinking? The answer is … both. Properly understood, these approaches actually complement one another very well. In order to understand how this works, we are happy to welcome two of Munich’s leading figures in the Lean Startup scene: Ralf Westbrock and Ben O’Hear.
+
+      First we will have an introduction to Lean Startup, drawing both on theory as well as practical experience applying it in companies ranging from startups to large corporations.
+
+      Then we will go in depth into one of the more important tools of Lean Startup: The MVP.
+
+      Finally we will hear how Ralf and Ben combined Design Thinking and Lean Startup to create an even more powerful innovation toolkit for startup and corporate accelerators.
+    </p>
+
+    <p>
+      Wir werden uns um 19 Uhr am 12. Mai 2016 in den Räumen von freeletics treffen.
+    </p>
+
+    <p>
+      Für Getränke und Essen ist gesorgt.
+    </p>
+
     <p class="title">
       Join Us
     </p>
