--- a/index.html
+++ b/index.html
@@ -19,36 +19,12 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Stammtisch></span><br>
-      <span class="important-info">19 Uhr, 16. Juni</span> 2016<br>
-      <span class="important-info"><a href="http://www.ocui.de">ocui</a></span>, München
-      <a class="icon-link" href="https://goo.gl/maps/m9aH1LB6jJr"><i class="fa fa-map-marker"></i></a><br>
-      <span class="important-info">Registrieren:</span> <a
-              href="https://www.xing.com/events/16-06-stammtisch-design-thinking-munchen-1694826">Xing</a> oder <a href="http://www.meetup.com/DT-Muc/events/231640692">Meetup</a>
+      <span class="important-info">Sommerpause</span><br>
+      <span class="important-info">Wir sehen uns im September wieder!<br>
     </div>
   </section>
 
   <section id="description">
-
-    <p class="title">
-      Join Us
-    </p>
-
-    <p class="talk-title">
-      Stammtisch
-    </p>
-
-    <p>
-      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
-    </p>
-
-    <p>
-      Wir werden uns um 19 Uhr am 16. Juni 2016 bei <a href="http://www.ocui.de">ocui</a> treffen.
-    </p>
-
-    <p>
-      Wir wollen uns in lockerer Atmosphäre über Design Thinking, Innovationen und verschiedene andere Themen unterhalten.
-    </p>
 
     <p class="title">
       Hello, World!
