--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="next-meetup">
       <span class="important-info">Sommerpause</span><br>
-      <span class="important-info">Wir sehen uns im September wieder!<br>
+      <span class="important-info">Wir sehen uns<br> im September wieder!<br>
     </div>
   </section>
 
