Update next event

--- a/index.html
+++ b/index.html
@@ -19,12 +19,33 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">Sommerpause</span><br>
-      <span class="important-info">Wir sehen uns<br> im September wieder!<br>
+      <span class="important-info">19 Uhr, 22. September</span> 2016<br>
+      <span class="important-info">Stefanie Grünberg<br>Michael Grashiller<br></span>
+      Registrieren: <span class="important-info"><a href="https://www.xing.com/events/22-09-nahrboden-innovationen-kulturellen-wandel-1724336">Xing</a></span> oder <span class="important-info"><a href="https://www.meetup.com/DT-Muc/events/233909869/">Meetup</a></span>
     </div>
   </section>
 
   <section id="description">
+
+    <p class="talk-title">
+      Nährboden für Innovationen durch kulturellen Wandel
+    </p>
+
+    <p>
+      Stefanie Grünberg und Michael Grashiller
+    </p>
+
+    <p>
+      Stellen wir uns ein Unternehmen wie einen Wald vor, so bildet die richtige Unternehmenskultur den Nährboden für Innovationen. Ohne diesen können keine Ideen wachsen - Bemühungen sind nutzlos, Startup Gebäude versinken im Zuckersand und „not invented here“ wird zum ständigen Begleiter der Unternehmen. Doch wie bildet sich solch ein Fundament? Diese und weitere Fragen beantworten wir am 22.09.2016 in unserem Studio am Frankfurter Ring 117.
+    </p>
+
+    <p>
+      Wir werden uns um 19 Uhr am 22. September 2016 in den Räumen von <a href="https://www.google.com/maps?f=q&hl=en&q=Frankfurter+Ring+117,+München,+de">csi entwicklungstechnik GmbH</a> treffen.
+    </p>
+
+    <p>
+      Für Getränke und Essen ist gesorgt.
+    </p>
 
     <p class="title">
       Hello, World!
