--- a/index.html
+++ b/index.html
@@ -19,28 +19,32 @@
     </div>
 
     <div id="next-meetup">
-      <span class="important-info">19 Uhr, 22. September</span> 2016<br>
-      <span class="important-info">Stefanie Grünberg<br>Michael Grashiller<br></span>
-      Registrieren: <span class="important-info"><a href="https://www.xing.com/events/22-09-nahrboden-innovationen-kulturellen-wandel-1724336">Xing</a></span> oder <span class="important-info"><a href="https://www.meetup.com/DT-Muc/events/233909869/">Meetup</a></span>
+      <span class="important-info">19 Uhr, 17. Oktober</span> 2016<br>
+      <span class="important-info">Dr. Juergen Erbeldinger<br></span>
+      <!--Registrieren: <span class="important-info"><a href="https://www.xing.com/events/22-09-nahrboden-innovationen-kulturellen-wandel-1724336">Xing</a></span> oder <span class="important-info"><a href="https://www.meetup.com/DT-Muc/events/233909869/">Meetup</a></span>-->
     </div>
   </section>
 
   <section id="description">
 
     <p class="talk-title">
-      Nährboden für Innovationen durch kulturellen Wandel
+      Arbeitswelt der Zukunft
     </p>
 
     <p>
-      Stefanie Grünberg und Michael Grashiller
+      Juergen Erbeldinger, CEO bei Partake
     </p>
 
     <p>
-      Stellen wir uns ein Unternehmen wie einen Wald vor, so bildet die richtige Unternehmenskultur den Nährboden für Innovationen. Ohne diesen können keine Ideen wachsen - Bemühungen sind nutzlos, Startup Gebäude versinken im Zuckersand und „not invented here“ wird zum ständigen Begleiter der Unternehmen. Doch wie bildet sich solch ein Fundament? Diese und weitere Fragen beantworten wir am 22.09.2016 in unserem Studio am Frankfurter Ring 117.
+      Wie Design Thinking und weitere agile Managementmethoden unsere Arbeit beeinflussen und verändern. Durch Perspektivenwechsel werden Innovationen vorangetrieben, neue Erlebnisse generiert und Wettbewerbsvorteile ermöglicht.
     </p>
 
     <p>
-      Wir werden uns um 19 Uhr am 22. September 2016 in den Räumen von <a href="https://www.google.com/maps?f=q&hl=en&q=Frankfurter+Ring+117,+München,+de">csi entwicklungstechnik GmbH</a> treffen.
+      Dr. Juergen Erbeldinger ist Gründer und CEO von Partake. Er ist seit vielen Jahren als Vor- und Querdenker gefragt und hat in den letzten Jahren die Ideen des Design Thinking weiterentwickelt. Juergen Erbeldinger fordert Gründer und Unternehmen auf, vor allem auf Kundenerlebnis und Innovation zu setzen, um auf disruptiven Märkten zu überleben.
+    </p>
+
+    <p>
+      Wir werden uns um 19 Uhr am 17. Oktober 2016 in den Räumen von <a href="https://goo.gl/maps/GopCR1UAAaT2">AutoScout24</a> treffen.
     </p>
 
     <p>
