Add TBA to register

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="next-meetup">
       <span class="important-info">19 Uhr, 17. Oktober</span> 2016<br>
       <span class="important-info">Dr. Juergen Erbeldinger<br></span>
-      <!--Registrieren: <span class="important-info"><a href="https://www.xing.com/events/22-09-nahrboden-innovationen-kulturellen-wandel-1724336">Xing</a></span> oder <span class="important-info"><a href="https://www.meetup.com/DT-Muc/events/233909869/">Meetup</a></span>-->
+      Registrieren: TBA
     </div>
   </section>
 
