--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="next-meetup">
       <span class="important-info">19 Uhr, 17. Oktober</span> 2016<br>
       <span class="important-info">Dr. Juergen Erbeldinger<br></span>
-      Registrieren: TBA
+      Registrieren: <a href="https://www.xing.com/events/13-10-arbeitswelt-zukunft-design-thinking-munchen-1733730">Xing</a> oder <a href="https://www.meetup.com/de-DE/DT-Muc/events/234534343/">Meetup</a>
     </div>
   </section>
 
